# simLP

./: .gitignore  README.md  pyproject.toml  requirements.txt
simlp/: __init__.py  atom_utils.py  distance_metric.py  feedback_generator.py  partitioner.py  rtec_parser.py  run.py
src/: atom_utils.py  distance_metric.py  feedback_generator.py  run.py
unit_tests/: run_unit_tests.py
unit_tests/test1/: generated.prolog  log.txt.md
unit_tests/test2/: log.txt.md
unit_tests/test3/: log.txt.md
unit_tests/test4/: log.txt.md
unit_tests/test5/: log.md
unit_tests/test6/: log.txt  log.txt.md
unit_tests/test7/: log.txt.md
